syntax = "proto3";
package astra.feeburn.v2;

import "gogoproto/gogo.proto";
import "astra/feeburn/v2/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/AstraProtocol/astra/x/feeburn/types";

// GenesisState defines the feeburn module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
